2000-07-03  Ettore Perazzoli  <ettore@helixcode.com>

	* component-factory.c (create_folder): Get rid of a compiler
	warning by making sure `folder' is always initialized to some
	value for any code path.

2000-07-03  Dan Winship  <danw@helixcode.com>

	* message-list.c (select_msg): call mail_display_set_message with
	NULL if the message we tried to select doesn't exist (probably
	meaning we tried to selecte the first message and the folder is
	empty.)

	* mail-display.c (mail_display_set_message): deal with NULL as an
	input (meaning "undisplay previous message and display nothing").

2000-07-02  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (real_fetch_mail): Remove hack to redisplay the
	inbox, since folder_changed signals will now be emitted
	appropriately.

	* component-factory.c (create_vfolder_storage): Fix
	filter_driver_new invocation.

	* Makefile.am (bin_PROGRAMS): test-mail and test-thread should be
	noinst.

	* mail-ops.c (real_fetch_mail): 
	(vfolder_editor_clicked): 
	* component-factory.c (create_vfolder_storage):
	Pass mail_uri_to_folder and rules to filter_driver_new.

2000-07-02  Ettore Perazzoli  <ettore@helixcode.com>

	* folder-browser.c (mail_uri_to_folder): Fix double freeing of the
	local exception `ex'.

2000-07-01  Ettore Perazzoli  <ettore@helixcode.com>

	* mail-ops.c (refile_msg): Only allow type "mail" in the folder
	selection dialog.

2000-07-01  Dan Winship  <danw@helixcode.com>

	* pixmaps.h, pixmaps/*.xpm: Removed. These aren't being used any
	more. (The real pixmaps are in ../art.)

2000-07-01  Jeffrey Stedfast  <fejj@helixcode.com>

	* message-list.c (get_message_info):
	(select_msg): Updated to reflect camel-folder changes.

	* mail-ops.c (real_fetch_mail): Modified to reflect camel-folder
	changes.

2000-06-30  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (print_msg): Use gnome-print to do a print preview.

	* folder-browser-factory.c: Hook up "Print" button.
